<?xml version="1.0"?>
<package format="3">
  <name>event_camera_renderer</name>
  <version>3.0.0</version>
  <description>package for rendering event_camera_msgs</description>
  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <depend>event_camera_msgs</depend>
  <depend>event_camera_codecs</depend>  
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>ros_environment</depend>
  
  <export>
    <!-- this is crucial else the package will not be registered! -->
    <build_type>ament_cmake</build_type>
  </export>

</package>
